platform/media/plex-cpu-only.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      hostNetwork: true  # Required for Plex discovery
      containers:
      - name: plex
        image: linuxserver/plex:latest
        ports:
        - containerPort: 32400
          name: plex
          protocol: TCP
        - containerPort: 1900
          name: dlna-udp
          protocol: UDP
        - containerPort: 5353
          name: discovery-udp
          protocol: UDP
        - containerPort: 8324
          name: roku
          protocol: TCP
        - containerPort: 32410
          name: gdm-1
          protocol: UDP
        - containerPort: 32412
          name: gdm-2
          protocol: UDP
        - containerPort: 32413
          name: gdm-3
          protocol: UDP
        - containerPort: 32414
          name: gdm-4
          protocol: UDP
        - containerPort: 32469
          name: dlna-tcp
          protocol: TCP
        resources:
          requests:
            memory: "1Gi"
            cpu: "1000m"
          limits:
            memory: "3Gi"
            cpu: "4000m"
        volumeMounts:
        - name: media-storage
          mountPath: /config
          subPath: plex
        - name: media-storage
          mountPath: /tv
          subPath: tv
          readOnly: true
        - name: media-storage
          mountPath: /movies
          subPath: movies
          readOnly: true
        - name: media-storage
          mountPath: /transcode
          subPath: plex-transcode
      volumes:
      - name: media-storage
        persistentVolumeClaim:
          claimName: media-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  type: LoadBalancer
  selector:
    app: plex
  ports:
  - name: plex
    port: 32400
    targetPort: 32400
    protocol: TCP
