platform/media/bazarr-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bazarr.internal.sever-it.com`)
      services:
        - name: bazarr
          port: 6767
  tls:
    secretName: bazarr-tls-cert
