platform/media/overseerr-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`overseerr.internal.sever-it.com`)
      services:
        - name: overseerr
          port: 5055
  tls:
    secretName: overseerr-tls-cert
